set up sharedpreferences & timer, change all text in indo

--- a/app/src/main/res/layout/forgot_password_bottom_sheet.xml
+++ b/app/src/main/res/layout/forgot_password_bottom_sheet.xml
@@ -19,7 +19,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/montserrat_bold"
-        android:text="Forgot Password"
+        android:text="Lupa Password"
         android:textSize="18sp" />
 
     <TextView
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
-        android:text="Enter your email and we will send you\n on how to reset your password"
+        android:text="Masukkan email anda untuk reset password"
         android:textAlignment="center" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -40,7 +40,7 @@
             android:id="@+id/et_email_forgot_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email address" />
+            android:hint="Alamat email" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
