--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -108,7 +108,7 @@
             android:backgroundTint="@color/colorPrimary"
             android:ems="10"
             android:fontFamily="@font/montserrat_medium"
-            android:hint="ini placeholder"
+            android:hint="Tempat, tanggal lahir"
             android:inputType="date"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@id/tv_tl"
@@ -136,7 +136,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorPrimary"
             android:fontFamily="@font/montserrat_medium"
-            android:hint="ini place holder"
+            android:hint="xxxxxxxxxx"
             android:inputType="number"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@id/tv_nik"
