--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -98,7 +98,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Forgot password ?"
+            android:text="Lupa password ?"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="@id/et_password"
             app:layout_constraintTop_toBottomOf="@id/et_password" />
@@ -125,7 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/montserrat_regular"
-            android:text="Don't have account?"
+            android:text="Belum punya akun?"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.342"
@@ -138,7 +138,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/montserrat_bold"
-            android:text="Sign up"
+            android:text="Daftar"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/tv_not_have_account"
             app:layout_constraintStart_toEndOf="@id/tv_not_have_account"
