--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -103,17 +103,27 @@
 
         <EditText
             android:id="@+id/et_birth_date"
-            android:layout_width="0dp"
+            android:layout_width="260dp"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorPrimary"
             android:ems="10"
             android:fontFamily="@font/montserrat_medium"
-            android:hint="Tempat, tanggal lahir"
+            android:hint="Tanggal lahir"
             android:inputType="date"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="@id/tv_tl"
             app:layout_constraintStart_toStartOf="@id/tv_tl"
             app:layout_constraintTop_toBottomOf="@+id/tv_tl" />
+
+        <ImageButton
+            android:id="@+id/btnSetBirthDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="@android:color/transparent"
+            android:src="@drawable/ic_baseline_date"
+            app:layout_constraintBottom_toBottomOf="@id/et_birth_date"
+            app:layout_constraintStart_toEndOf="@id/et_birth_date"
+            app:layout_constraintTop_toTopOf="@id/et_birth_date" />
 
         <TextView
             android:id="@+id/tv_nik"
